--- a/birdwatching.html
+++ b/birdwatching.html
@@ -17,7 +17,7 @@
 
 <header role="banner">
 <h1>Birdwatching</h1>
-      <img src="dove.png" alt="a simple dove logo">
+      <img src="images/dove.png" alt="a simple dove logo">
 
 <nav role="navigation">
       <ul>
